--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,17 @@
       justify-content: center;
       align-items: center;
 }
+
+
 @media screen and (min-width: 601px) {
 
   .title_heading { color: #111;
     font-family: 'Helvetica Neue',
     sans-serif; font-size: 150px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; margin-top: 20px; }
+
+    .title_heading_magic { color: #111;
+      font-family: 'Helvetica Neue',
+      sans-serif; font-size: 100px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; margin-top: 20px;}
 
     .h2title_heading { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 30px; text-align: center;  display: flex;
       justify-content: center;
@@ -42,6 +48,11 @@
       justify-content: center;
       align-items: center; }
 
+      .card_details{
+        padding: 10px;
+        margin: 20px;}
+      
+
       .navbar-dark .navbar-nav .nav-link {
         color: white !important
     }
@@ -52,6 +63,10 @@
   .title_heading { color: #111;
     font-family: 'Helvetica Neue',
     sans-serif; font-size: 50px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; margin-top: 20px;}
+
+    .title_heading_magic { color: #111;
+      font-family: 'Helvetica Neue',
+      sans-serif; font-size: 35px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; margin-top: 20px;}
 
     .h2title_heading { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 10px;  text-align: center;  display: flex !important;
       justify-content: center;
