--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@
       align-items: center;
 }
 
+.paypal_button{
+  margin: 20px;
+  display: flex !important;
+  text-align: center;
+      justify-content: center;
+      align-items: center;
+}
+
 
 @media screen and (min-width: 601px) {
 
@@ -36,6 +44,10 @@
     .h2title_heading { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 30px; text-align: center;  display: flex;
       justify-content: center;
       align-items: center;}
+
+      .ptext { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 20px; text-align: center;  display: flex;
+        justify-content: center;
+        align-items: center;}
 
     .table_heading {font-size: 20px;}
     .table_content {font-size: 20px;}
@@ -71,6 +83,10 @@
     .h2title_heading { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 10px;  text-align: center;  display: flex !important;
       justify-content: center;
       align-items: center; }
+
+      .ptext { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 5px; text-align: center;  display: flex;
+        justify-content: center;
+        align-items: center;}
 
     .table_heading {font-size: 8px;}
     .table_content {font-size: 8px;}
