--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,21 @@
 
 
 .pvw { color: #111; font-family: 'Open Sans', sans-serif; font-size: 2vw; margin: 0 0 72px; text-align: center; }
+.page-item.active .page-link {
+  background-color: #111 !important;
+  border-color: #111 !important;
+  color: white !important;
+}
 
+.page-link {
+  color: #111 !important;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #111 !important;
+  border-color: #111 !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -63,7 +77,7 @@
       .card_details{
         padding: 10px;
         margin: 20px;}
-      
+        
 
       .navbar-dark .navbar-nav .nav-link {
         color: white !important
@@ -72,6 +86,27 @@
 }
 
 @media screen and (max-width: 600px) {
+
+  .btn-group-lg>.btn, .btn-lg {    
+    font-size: 15px !important;
+}
+
+  .card_details{
+    margin-top: 10px;}
+  td {
+    font-size: 10px !important;
+    overflow: scroll;  
+}
+
+.react-bootstrap-table-page-btns-ul {
+  float: none !important;
+}
+
+.pagination {
+  font-size: 10px !important;
+  overflow: scroll !important;
+}
+
   .title_heading { color: #111;
     font-family: 'Helvetica Neue',
     sans-serif; font-size: 50px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; margin-top: 20px;}
